[gd_scene load_steps=5 format=3 uid="uid://bssnhm63l7ni1"]

[ext_resource type="Script" uid="uid://b2smg5i5c8j0l" path="res://level_1.gd" id="1_hbghi"]
[ext_resource type="Texture2D" uid="uid://dt6xgq8w3vtlb" path="res://icon.svg" id="2_hn12h"]
[ext_resource type="AudioStream" uid="uid://doo8j58b4a2f5" path="res://d6-82018.mp3" id="3_ihfcg"]
[ext_resource type="AudioStream" uid="uid://dgrtslj88w1k3" path="res://e6-82016.mp3" id="4_rka8t"]

[node name="level1" type="Node2D"]
script = ExtResource("1_hbghi")

[node name="String" type="Button" parent="."]
offset_left = -65.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 66.0
icon = ExtResource("2_hn12h")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="String"]
stream = ExtResource("3_ihfcg")

[node name="String2" type="Button" parent="."]
offset_left = 78.0
offset_top = -62.0
offset_right = 214.0
offset_bottom = 74.0
icon = ExtResource("2_hn12h")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="String2"]
position = Vector2(-143, -2)
stream = ExtResource("4_rka8t")

[node name="String3" type="Button" parent="."]
offset_left = 231.0
offset_top = -62.0
offset_right = 367.0
offset_bottom = 74.0
icon = ExtResource("2_hn12h")

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="String3"]
position = Vector2(-296, -2)
stream = ExtResource("3_ihfcg")

[node name="String4" type="Button" parent="."]
offset_left = 381.0
offset_top = -61.0
offset_right = 517.0
offset_bottom = 75.0
icon = ExtResource("2_hn12h")

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="String4"]
position = Vector2(-446, -3)
stream = ExtResource("4_rka8t")

[node name="String5" type="Button" parent="."]
offset_left = 534.0
offset_top = -62.0
offset_right = 670.0
offset_bottom = 74.0
icon = ExtResource("2_hn12h")

[node name="AudioStreamPlayer2D5" type="AudioStreamPlayer2D" parent="String5"]
position = Vector2(-599, -2)
stream = ExtResource("3_ihfcg")

[node name="String6" type="Button" parent="."]
offset_left = 701.0
offset_top = -64.0
offset_right = 837.0
offset_bottom = 72.0
icon = ExtResource("2_hn12h")

[node name="AudioStreamPlayer2D6" type="AudioStreamPlayer2D" parent="String6"]
position = Vector2(-766, 0)
stream = ExtResource("4_rka8t")

[connection signal="pressed" from="String" to="." method="_on_string_pressed"]
[connection signal="pressed" from="String2" to="." method="_on_string_2_pressed"]
[connection signal="pressed" from="String3" to="." method="_on_string_3_pressed"]
[connection signal="pressed" from="String4" to="." method="_on_string_4_pressed"]
[connection signal="pressed" from="String5" to="." method="_on_string_5_pressed"]
[connection signal="pressed" from="String6" to="." method="_on_string_6_pressed"]
